# piazza-roles

./: .gitmodules  LICENCE  Pipfile  README.md  docker-compose.override.yml  docker-compose.yml
web/: Dockerfile  Pipfile  app.py
web/ext/: CMakeLists.txt  setup.py
web/ext/src/: sampler.cpp
web/migrations/versions/: 4cbe8e432c6b_add_action_table.py  547fa0a6608b_add_session_actions.py  7b08cf35abd9_initial_database.py  95e11f84f7e9_add_num_fully_anon_to_crawl.py  bb3f9dae30cf_associate_actions_with_crawls_instead_.py  dae74ff90530_add_task_info_to_analysis.py  f89c5012fd5d_add_weight_to_roleproportion.py  fcdebddd1d72_add_analysis_tables.py
web/roles/: app.py  celery.py  controller.py  forms.py  models.py  tasks.py  utils.py  websockets.py  wsgi.py
web/roles/static/js/: analysis.js  barchart.js  crawl.js  role.js  user.js
web/roles/templates/: _formhelpers.html  analysis.html  class.html  classes.html  crawl.html  index.html  layout.html  new_analysis.html  role.html  user.html
web/templates/: index.html
